Remove need to pass arguments to render_pattern
* render_patter works with 0 to many arguments. Arguments must be passed
  with (key: value).
* Add dummy/app feature test to simulate rails errors.

--- a/spec/dummy/app/views/welcome/index.html.erb
+++ b/spec/dummy/app/views/welcome/index.html.erb
@@ -1,1 +1,11 @@
-<%= render_pattern("card", title: "My Card") %>
+<div id="no_arguments">
+  <%= render_pattern("card") %>
+</div>
+
+<div id="one_argument">
+  <%= render_pattern("card", title: "Title") %>
+</div>
+
+<div id="two_arguments">
+  <%= render_pattern("card", description: "description", title: "Title") %>
+</div>
