Use prefab_patterns directory
* Move all pattern's js to app/assets/javascripts/prefab_patters/
* Move all pattern's css to app/assets/stylesheets/prefab_patters/
* Move all pattern's views to app/views/prefab_patters/

--- a/app/views/prefab_patterns/styleguide/index.html.erb
+++ b/app/views/prefab_patterns/styleguide/index.html.erb
@@ -2,6 +2,8 @@
 <%= javascript_include_tag "application" %>
 
 <section class="patterns">
+  <h1>Prefab Patterns</h1>
+
   <% @patterns.each do |pattern| %>
     <a id="<%= pattern.name %>"></a>
 
