--- a/spec/dummy/app/views/welcome/index.html.erb
+++ b/spec/dummy/app/views/welcome/index.html.erb
@@ -7,5 +7,11 @@
 </div>
 
 <div id="two_arguments">
-  <%= render_pattern("card", description: "description", title: "Title") %>
+  <%= render_pattern("card",
+        description: "description",
+        title: "Title") %>
+</div>
+
+<div id="pattern_with_partial_in_same_directory">
+  <%= render_pattern("pattern_with_partial_in_same_directory") %>
 </div>
